news text overflow not correctly worked

--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -101,3 +101,15 @@ main {
 select {
     text-align-last: center;
 }
+
+.card-title {
+    height: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card-text {
+    height: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
